# Apprentice

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-aider.txt  requirements-gemini.txt  requirements.txt
config/: qwen.json  qwen.local.example.json  routing.md
docs/: CONFIGURATION.md  MULTI_AGENT.md
src/: __init__.py  agent.py  cli.py  deliver.py  gate.py  gate_cli.py  host_verify.py  metering.py  paths.py  providers.py  retrieval.py  roles.py  server.py  store.py
tests/: test_pipeline.py
